fixbug on wrong first day

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           </tr>
         </tbody>
       </table>
-      <p class="text-center">If</p>
+      <p class="text-center">Order List</p>
 
       <table class="table">
         <tbody class="weeklyResults">
